--- a/style.css
+++ b/style.css
@@ -3664,7 +3664,7 @@ body{
   }
 }
 
-@media (min-width: 1024px) and (max-width: 1280px) and (min-height: 2000px) and (max-height: 2800px) {
+@media only screen and (min-width: 393px) and (orientation: portrait){
   .sections {
     width: 100vw;
     display: -ms-grid;
