--- a/style.css
+++ b/style.css
@@ -3664,7 +3664,7 @@ body{
   }
 }
 
-@media only screen and (min-width: 393px) and (orientation: portrait){
+/* @media (min-width: 300px) and (min-height: 2000px) and (max-height: 2800px) {
   .sections {
     width: 100vw;
     display: -ms-grid;
@@ -4159,4 +4159,4 @@ body{
   .uparrow i {
     font-size: 7vh;
   }
-}
+} */
