--- a/output.css
+++ b/output.css
@@ -4392,12 +4392,11 @@ body{
   }
 }
 
-/* @media (min-width: 300px) and (min-height: 2000px) and (max-height: 2800px) {
+
+  @media only screen and (min-width: 393px) and (orientation: portrait){
   .sections {
     width: 100vw;
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: none;
     grid-template-columns: none;
     overflow-x: hidden;
     height: 81vh;
@@ -4410,11 +4409,7 @@ body{
   }
 
   .AppName {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     padding-left: 2vh;
     height: 10vh;
@@ -4442,14 +4437,10 @@ body{
     width: 100%;
     position: absolute;
     padding-top: 3.5vw;
-    display: -ms-grid;
     display: grid;
-    -ms-grid-rows: 23vh 20vh 22vh;
     grid-template-rows: 23vh 20vh 22vh;
     height: 0%;
     opacity: 0;
-    -webkit-transition: height 1.5s ease-out, opacity 1.5s ease-out;
-    -o-transition: height 1.5s ease-out, opacity 1.5s ease-out;
     transition: height 1.5s ease-out, opacity 1.5s ease-out;
     border-bottom-left-radius: 5vw;
     border-bottom-right-radius: 5vw;
@@ -4480,7 +4471,6 @@ body{
     min-height: 100vh;
     max-height: 100vh;
     position: relative;
-    -ms-grid-rows: 10vh 18vh 50vh 15vh;
     grid-template-rows: 10vh 18vh 50vh 15vh;
     padding: 0;
     border: none;
@@ -4516,22 +4506,7 @@ body{
     padding-left: 1vw;
   }
 
-  .inputsbox::-webkit-input-placeholder {
-    font-size: 1.6vh;
-    padding-left: 1vw;
-  }
-
   .inputsbox::-moz-placeholder {
-    font-size: 1.6vh;
-    padding-left: 1vw;
-  }
-
-  .inputsbox:-ms-input-placeholder {
-    font-size: 1.6vh;
-    padding-left: 1vw;
-  }
-
-  .inputsbox::-ms-input-placeholder {
     font-size: 1.6vh;
     padding-left: 1vw;
   }
@@ -4625,7 +4600,6 @@ body{
   .play {
     padding: 0;
     position: relative;
-    -ms-grid-columns: none;
     grid-template-columns: none;
     top: -30vh;
     min-height: 47vh;
@@ -4667,7 +4641,6 @@ body{
   .artists {
     position: relative;
     top: -8vh;
-    -ms-grid-columns: none;
     grid-template-columns: none;
   }
 
@@ -4689,9 +4662,6 @@ body{
 
   .artistsDiv1,
   .artistsDiv2 {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
     gap: 4vw;
   }
@@ -4723,11 +4693,8 @@ body{
     width: 100%;
     height: 0%;
     max-height: 67vh;
-    max-height: 67vh;
     border-radius: 4vw;
     overflow: hidden;
-    -webkit-transition: height 1.2s ease-in-out;
-    -o-transition: height 1.2s ease-in-out;
     transition: height 1.2s ease-in-out;
     z-index: 200;
     background-color: #fff01a;
@@ -4788,8 +4755,6 @@ body{
     width: 100%;
     height: 100%;
     padding: 5vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
 
   }
@@ -4851,8 +4816,6 @@ body{
   .poster {
     position: relative;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     bottom: 15vh;
     width: 14vh;
@@ -4868,8 +4831,6 @@ body{
     opacity: 1;
     z-index: 90;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
   }
 
@@ -4879,56 +4840,64 @@ body{
     z-index: 9999;
     right: 6%;
     bottom: 56.5%;
-    -webkit-transition: opacity 1.2s ease-in-out;
-    -o-transition: opacity 1.2s ease-in-out;
     transition: opacity 1.2s ease-in-out;
   }
 
   .uparrow i {
     font-size: 7vh;
   }
-} */
+}
 
-.placeholder\:text-\[2vh\]::-moz-placeholder {
+
+  .placeholder\:text-\[2vh\]::-moz-placeholder {
   font-size: 2vh;
 }
 
-.placeholder\:text-\[2vh\]::placeholder {
+
+  .placeholder\:text-\[2vh\]::placeholder {
   font-size: 2vh;
 }
 
-.placeholder\:text-gray-300::-moz-placeholder {
+
+  .placeholder\:text-gray-300::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-gray-300::placeholder {
+
+  .placeholder\:text-gray-300::placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.hover\:bg-gradient-to-r:hover {
+
+  .hover\:bg-gradient-to-r:hover {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.hover\:text-gray-300:hover {
+
+  .hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.active\:h-\[3\.5vw\]:active {
+
+  .active\:h-\[3\.5vw\]:active {
   height: 3.5vw;
 }
 
-.active\:w-\[3\.5vw\]:active {
+
+  .active\:w-\[3\.5vw\]:active {
   width: 3.5vw;
 }
 
-.active\:text-3xl:active {
+
+  .active\:text-3xl:active {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.active\:text-\[2vw\]:active {
+
+  .active\:text-\[2vw\]:active {
   font-size: 2vw;
 }
