--- a/style.css
+++ b/style.css
@@ -3664,7 +3664,8 @@ body{
   }
 }
 
-/* @media (min-width: 300px) and (min-height: 2000px) and (max-height: 2800px) {
+
+  @media only screen and (min-width: 393px) and (orientation: portrait){
   .sections {
     width: 100vw;
     display: -ms-grid;
@@ -4159,4 +4160,4 @@ body{
   .uparrow i {
     font-size: 7vh;
   }
-} */
+}
