--- a/output.css
+++ b/output.css
@@ -1,15 +1,6 @@
 /*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
-/*
 ! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
-*/
-
-/*
+*//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
@@ -326,7 +317,6 @@ menu {
 /*
 Reset default styling for dialogs.
 */
-
 dialog {
   padding: 0;
 }
@@ -367,7 +357,6 @@ button,
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
-
 :disabled {
   cursor: default;
 }
@@ -401,7 +390,6 @@ video {
 }
 
 /* Make elements with the HTML hidden attribute stay hidden by default */
-
 [hidden] {
   display: none;
 }
@@ -1034,7 +1022,7 @@ video {
   transition-duration: 150ms;
 }
 
-body{
+body {
   overflow-y: hidden;
 }
 
@@ -1128,7 +1116,7 @@ body{
   font-size: 2vh;
 }
 
-.btnsdiv{
+.btnsdiv {
   gap: 2vh;
 }
 
@@ -1272,15 +1260,19 @@ body{
     top: -2.4vh;
     overflow: visible;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.6vh;
   }
@@ -1511,9 +1503,11 @@ body{
   .text2 h4 {
     font-size: 2.3vh;
   }
+
   .btnsdiv {
     gap: 1.5vh;
   }
+
   .btnsdiv i {
     font-size: 4.5vh;
   }
@@ -1554,14 +1548,14 @@ body{
 
 
 @media only screen and (min-device-width : 376px) and (max-device-width : 425px) {
-  
+
   .sections {
     width: 100vw;
     display: grid;
     grid-template-columns: none;
     overflow-x: hidden;
     height: 80vh;
-    
+
     border-radius: 0%;
   }
 
@@ -1699,15 +1693,19 @@ body{
     top: -0.9vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.6vh;
   }
@@ -1935,9 +1933,10 @@ body{
     margin-bottom: 1vw;
   }
 
-  .btnsdiv{
+  .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -2129,15 +2128,19 @@ body{
     height: 33vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.8vw;
   }
@@ -2368,6 +2371,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -2554,15 +2558,19 @@ body{
     top: -1vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.7vh;
   }
@@ -2797,6 +2805,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.7vh;
   }
@@ -2987,16 +2996,19 @@ body{
     top: -1vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.7vh;
   }
@@ -3227,6 +3239,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.7vh;
   }
@@ -3483,9 +3496,11 @@ body{
     width: 7vh;
     height: 7vh;
   }
-  .btnsdiv{
+
+  .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -3647,7 +3662,6 @@ body{
   }
 
   .cardsec {
-    /* grid-template-rows: 10vh 10vh 5vh 5vh; */
     overflow-y: auto;
   }
 
@@ -3793,7 +3807,6 @@ body{
 
   .text3 {
     position: relative;
-    /* bottom: 0.1vh; */
   }
 
   .text3 h4 {
@@ -3808,7 +3821,7 @@ body{
 
   .btnsdiv {
     bottom: 2vh;
-      gap: 2vh;
+    gap: 2vh;
   }
 
   .btnsdiv i {
@@ -4322,10 +4335,12 @@ body{
     margin-bottom: 1vw;
     font-size: 2.6vh;
   }
+
   .poster {
     position: relative;
     bottom: 9vh;
   }
+
   .poster2 {
     width: 4vw;
     height: 4vw;
@@ -4393,13 +4408,13 @@ body{
 }
 
 
-  @media only screen and (min-width: 393px) and (orientation: portrait){
+@media (min-width: 320px) and (max-width: 430px) and (min-height: 568px) and (max-height: 1004px) {
   .sections {
     width: 100vw;
     display: grid;
     grid-template-columns: none;
     overflow-x: hidden;
-    height: 81vh;
+    height: 84vh;
     border-radius: 0%;
     overflow-y: scroll;
   }
@@ -4444,6 +4459,7 @@ body{
     transition: height 1.5s ease-out, opacity 1.5s ease-out;
     border-bottom-left-radius: 5vw;
     border-bottom-right-radius: 5vw;
+    border-top-left-radius: 0;
     max-height: 70vh;
     z-index: 999;
     background-color: #374151;
@@ -4467,6 +4483,10 @@ body{
     color: rgb(194, 194, 194);
   }
 
+  .cardsec::-webkit-scrollbar {
+    display: none;
+  }
+
   .cardsec {
     min-height: 100vh;
     max-height: 100vh;
@@ -4487,8 +4507,9 @@ body{
   }
 
   .inputs {
-    width: 25vh;
+    width: 32vh;
     margin-left: 2vh;
+    border-radius: 0.6vh;
   }
 
   .angles {
@@ -4507,12 +4528,12 @@ body{
   }
 
   .inputsbox::-moz-placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
   .inputsbox::placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
@@ -4602,8 +4623,8 @@ body{
     position: relative;
     grid-template-columns: none;
     top: -30vh;
-    min-height: 47vh;
-    max-height: 47vh;
+    min-height: 62vh;
+    max-height: 62vh;
   }
 
   .playtext2 h4 {
@@ -4689,10 +4710,10 @@ body{
 
   .songList {
     position: absolute;
-    bottom: -19%;
+    bottom: -12%;
     width: 100%;
     height: 0%;
-    max-height: 67vh;
+    max-height: 77vh;
     border-radius: 4vw;
     overflow: hidden;
     transition: height 1.2s ease-in-out;
@@ -4738,14 +4759,13 @@ body{
   }
 
   .listItem {
-    height: 10vh;
+    height: 11vh;
     border-radius: 1vh;
-    margin-bottom: 1vh;
   }
 
   .poster2 {
-    width: 8vh;
-    height: 8vh;
+    width: 9vh;
+    height: 9vh;
     margin-left: 2vw;
     border-radius: 0.8vh;
   }
@@ -4759,10 +4779,6 @@ body{
 
   }
 
-  .albumName {
-    font-size: 5vh;
-  }
-
   .moviename {
     color: rgb(179, 179, 179);
   }
@@ -4771,19 +4787,19 @@ body{
     position: relative;
     width: 7vh;
     height: 7vh;
-    border-radius: 3vw;
+    border-radius: 1.4vh;
     bottom: 2vh;
   }
 
   .text3 {
     position: relative;
     top: -2vh;
-    margin-left: 2vw;
+    margin-left: 1vh;
   }
 
   .text3 h4 {
-    font-size: 5vw;
-    margin-bottom: 7vw;
+    font-size: 2.3vh;
+    margin-bottom: 1.2vh;
   }
 
   .text2 h4 {
@@ -4795,29 +4811,34 @@ body{
   }
 
   .text4 span {
-    font-size: 2vh;
+    font-size: 2.1vh;
   }
 
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.5vh;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .poster {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 15vh;
+    bottom: 16vh;
     width: 14vh;
     height: 14vh;
     z-index: 899;
@@ -4826,7 +4847,7 @@ body{
 
   .uparrow {
     position: fixed;
-    bottom:25%;
+    bottom: 25%;
     color: rgb(204, 204, 204);
     opacity: 1;
     z-index: 90;
@@ -4839,7 +4860,7 @@ body{
     color: rgb(68, 68, 68);
     z-index: 9999;
     right: 6%;
-    bottom: 56.5%;
+    bottom: 73.5%;
     transition: opacity 1.2s ease-in-out;
   }
 
@@ -4849,55 +4870,55 @@ body{
 }
 
 
-  .placeholder\:text-\[2vh\]::-moz-placeholder {
+.placeholder\:text-\[2vh\]::-moz-placeholder {
   font-size: 2vh;
 }
 
 
-  .placeholder\:text-\[2vh\]::placeholder {
+.placeholder\:text-\[2vh\]::placeholder {
   font-size: 2vh;
 }
 
 
-  .placeholder\:text-gray-300::-moz-placeholder {
+.placeholder\:text-gray-300::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 
-  .placeholder\:text-gray-300::placeholder {
+.placeholder\:text-gray-300::placeholder {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 
-  .hover\:bg-gradient-to-r:hover {
+.hover\:bg-gradient-to-r:hover {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 
-  .hover\:text-gray-300:hover {
+.hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 
-  .active\:h-\[3\.5vw\]:active {
+.active\:h-\[3\.5vw\]:active {
   height: 3.5vw;
 }
 
 
-  .active\:w-\[3\.5vw\]:active {
+.active\:w-\[3\.5vw\]:active {
   width: 3.5vw;
 }
 
 
-  .active\:text-3xl:active {
+.active\:text-3xl:active {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
 
-  .active\:text-\[2vw\]:active {
+.active\:text-\[2vw\]:active {
   font-size: 2vw;
 }
