--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   overflow-y: hidden;
 }
 
@@ -115,7 +108,7 @@ body{
   font-size: 2vh;
 }
 
-.btnsdiv{
+.btnsdiv {
   gap: 2vh;
 }
 
@@ -285,15 +278,19 @@ body{
     top: -2.4vh;
     overflow: visible;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.6vh;
   }
@@ -533,9 +530,11 @@ body{
   .text2 h4 {
     font-size: 2.3vh;
   }
+
   .btnsdiv {
     gap: 1.5vh;
   }
+
   .btnsdiv i {
     font-size: 4.5vh;
   }
@@ -582,7 +581,7 @@ body{
 
 
 @media only screen and (min-device-width : 376px) and (max-device-width : 425px) {
-  
+
   .sections {
     width: 100vw;
     display: -ms-grid;
@@ -591,7 +590,7 @@ body{
     grid-template-columns: none;
     overflow-x: hidden;
     height: 80vh;
-    
+
     border-radius: 0%;
   }
 
@@ -753,15 +752,19 @@ body{
     top: -0.9vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.6vh;
   }
@@ -1000,9 +1003,10 @@ body{
     margin-bottom: 1vw;
   }
 
-  .btnsdiv{
+  .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -1226,15 +1230,19 @@ body{
     height: 33vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.8vw;
   }
@@ -1476,6 +1484,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -1694,15 +1703,19 @@ body{
     top: -1vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.7vh;
   }
@@ -1948,6 +1961,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.7vh;
   }
@@ -2170,16 +2184,19 @@ body{
     top: -1vh;
     overflow-x: scroll;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .playtext h4 {
     font-size: 2.7vh;
   }
@@ -2421,6 +2438,7 @@ body{
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.7vh;
   }
@@ -2703,9 +2721,11 @@ body{
     width: 7vh;
     height: 7vh;
   }
-  .btnsdiv{
+
+  .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.4vh;
   }
@@ -2881,7 +2901,6 @@ body{
   }
 
   .cardsec {
-    /* grid-template-rows: 10vh 10vh 5vh 5vh; */
     overflow-y: auto;
   }
 
@@ -3028,7 +3047,6 @@ body{
 
   .text3 {
     position: relative;
-    /* bottom: 0.1vh; */
   }
 
   .text3 h4 {
@@ -3043,7 +3061,7 @@ body{
 
   .btnsdiv {
     bottom: 2vh;
-      gap: 2vh;
+    gap: 2vh;
   }
 
   .btnsdiv i {
@@ -3594,10 +3612,12 @@ body{
     margin-bottom: 1vw;
     font-size: 2.6vh;
   }
+
   .poster {
     position: relative;
     bottom: 9vh;
   }
+
   .poster2 {
     width: 4vw;
     height: 4vw;
@@ -3665,7 +3685,7 @@ body{
 }
 
 
-  @media only screen and (min-width: 393px) and (orientation: portrait){
+@media (min-width: 320px) and (max-width: 430px) and (min-height: 568px) and (max-height: 1004px) {
   .sections {
     width: 100vw;
     display: -ms-grid;
@@ -3673,7 +3693,7 @@ body{
     -ms-grid-columns: none;
     grid-template-columns: none;
     overflow-x: hidden;
-    height: 81vh;
+    height: 84vh;
     border-radius: 0%;
     overflow-y: scroll;
   }
@@ -3726,6 +3746,7 @@ body{
     transition: height 1.5s ease-out, opacity 1.5s ease-out;
     border-bottom-left-radius: 5vw;
     border-bottom-right-radius: 5vw;
+    border-top-left-radius: 0;
     max-height: 70vh;
     z-index: 999;
     background-color: #374151;
@@ -3749,6 +3770,10 @@ body{
     color: rgb(194, 194, 194);
   }
 
+  .cardsec::-webkit-scrollbar {
+    display: none;
+  }
+
   .cardsec {
     min-height: 100vh;
     max-height: 100vh;
@@ -3770,8 +3795,9 @@ body{
   }
 
   .inputs {
-    width: 25vh;
+    width: 32vh;
     margin-left: 2vh;
+    border-radius: 0.6vh;
   }
 
   .angles {
@@ -3790,27 +3816,27 @@ body{
   }
 
   .inputsbox::-webkit-input-placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
   .inputsbox::-moz-placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
   .inputsbox:-ms-input-placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
   .inputsbox::-ms-input-placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
   .inputsbox::placeholder {
-    font-size: 1.6vh;
+    font-size: 1.75vh;
     padding-left: 1vw;
   }
 
@@ -3901,8 +3927,8 @@ body{
     -ms-grid-columns: none;
     grid-template-columns: none;
     top: -30vh;
-    min-height: 47vh;
-    max-height: 47vh;
+    min-height: 62vh;
+    max-height: 62vh;
   }
 
   .playtext2 h4 {
@@ -3992,11 +4018,10 @@ body{
 
   .songList {
     position: absolute;
-    bottom: -19%;
+    bottom: -12%;
     width: 100%;
     height: 0%;
-    max-height: 67vh;
-    max-height: 67vh;
+    max-height: 77vh;
     border-radius: 4vw;
     overflow: hidden;
     -webkit-transition: height 1.2s ease-in-out;
@@ -4044,14 +4069,13 @@ body{
   }
 
   .listItem {
-    height: 10vh;
+    height: 11vh;
     border-radius: 1vh;
-    margin-bottom: 1vh;
   }
 
   .poster2 {
-    width: 8vh;
-    height: 8vh;
+    width: 9vh;
+    height: 9vh;
     margin-left: 2vw;
     border-radius: 0.8vh;
   }
@@ -4067,10 +4091,6 @@ body{
 
   }
 
-  .albumName {
-    font-size: 5vh;
-  }
-
   .moviename {
     color: rgb(179, 179, 179);
   }
@@ -4079,19 +4099,19 @@ body{
     position: relative;
     width: 7vh;
     height: 7vh;
-    border-radius: 3vw;
+    border-radius: 1.4vh;
     bottom: 2vh;
   }
 
   .text3 {
     position: relative;
     top: -2vh;
-    margin-left: 2vw;
+    margin-left: 1vh;
   }
 
   .text3 h4 {
-    font-size: 5vw;
-    margin-bottom: 7vw;
+    font-size: 2.3vh;
+    margin-bottom: 1.2vh;
   }
 
   .text2 h4 {
@@ -4103,31 +4123,36 @@ body{
   }
 
   .text4 span {
-    font-size: 2vh;
+    font-size: 2.1vh;
   }
 
   .btnsdiv {
     gap: 2vh;
   }
+
   .btnsdiv i {
     font-size: 4.5vh;
   }
-  .artiststext{
+
+  .artiststext {
     margin-right: 1vh;
   }
-  .playtext2{
+
+  .playtext2 {
     margin-right: 1vh;
   }
-  .playtext{
+
+  .playtext {
     margin-right: 1vh;
   }
+
   .poster {
     position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    bottom: 15vh;
+    bottom: 16vh;
     width: 14vh;
     height: 14vh;
     z-index: 899;
@@ -4136,7 +4161,7 @@ body{
 
   .uparrow {
     position: fixed;
-    bottom:25%;
+    bottom: 25%;
     color: rgb(204, 204, 204);
     opacity: 1;
     z-index: 90;
@@ -4151,7 +4176,7 @@ body{
     color: rgb(68, 68, 68);
     z-index: 9999;
     right: 6%;
-    bottom: 56.5%;
+    bottom: 73.5%;
     -webkit-transition: opacity 1.2s ease-in-out;
     -o-transition: opacity 1.2s ease-in-out;
     transition: opacity 1.2s ease-in-out;
